# markplane

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  formula-template.rb
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.markplane/: .gitignore  INDEX.md  config.yaml
.markplane/.context/: active-work.md  blocked-items.md  metrics.md  summary.md
.markplane/backlog/: BACK-003.md  BACK-005.md  BACK-006.md  BACK-008.md  BACK-011.md  BACK-013.md  BACK-015.md  BACK-017.md  BACK-018.md  INDEX.md
.markplane/backlog/archive/: TASK-2j6aa.md  TASK-2tags.md  TASK-3c585.md  TASK-3zks9.md  TASK-45fmi.md  TASK-4c2mh.md  TASK-4qegx.md  TASK-4wi4p.md  TASK-5wph3.md  TASK-63ufm.md  TASK-736rg.md  TASK-7cucf.md  TASK-7f8ev.md  TASK-8am45.md  TASK-8xvxq.md  TASK-9eqv8.md  TASK-9pugf.md  TASK-9rtjk.md  TASK-aicx6.md  TASK-ax3dv.md  TASK-divg5.md  TASK-eduur.md  TASK-eyg6c.md  TASK-f65s9.md  TASK-g3ew2.md  TASK-gpxpw.md  TASK-haky9.md  TASK-hdhaz.md  TASK-hgr6d.md  TASK-hv5xv.md  TASK-hvwsk.md  TASK-hw558.md  TASK-jc69g.md  TASK-jyvek.md  TASK-k9ujt.md  TASK-m7i6q.md  TASK-ns57e.md  TASK-p3inp.md  TASK-p7hs3.md  TASK-pj4ga.md  (+16 more)
.markplane/backlog/items/: BACK-001.md  BACK-002.md  BACK-003.md  BACK-004.md  BACK-005.md  BACK-006.md  BACK-007.md  BACK-008.md  BACK-009.md  BACK-010.md  BACK-012.md  BACK-014.md  BACK-016.md  TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md  TASK-007.md  TASK-008.md  TASK-009.md  TASK-010.md  TASK-011.md  TASK-012.md  TASK-013.md  TASK-014.md  TASK-015.md  TASK-016.md  TASK-017.md  TASK-018.md  TASK-019.md  TASK-020.md  TASK-021.md  TASK-022.md  TASK-023.md  TASK-024.md  TASK-025.md  TASK-026.md  TASK-027.md  (+84 more)
.markplane/kb/: INDEX.md
.markplane/notes/: INDEX.md  decisions.md  ideas.md
.markplane/notes/items/: NOTE-29e3c.md  NOTE-83hku.md  NOTE-b3wiq.md  NOTE-kbtk5.md  NOTE-v3uet.md
.markplane/plans/: INDEX.md
.markplane/plans/items/: PLAN-001.md  PLAN-f79x3.md
.markplane/roadmap/: EPIC-001.md  EPIC-002.md  EPIC-003.md  EPIC-004.md  EPIC-005.md  INDEX.md
.markplane/roadmap/archive/: EPIC-ji4z3.md
.markplane/roadmap/items/: EPIC-001.md  EPIC-002.md  EPIC-003.md  EPIC-004.md  EPIC-005.md  EPIC-006.md  EPIC-4bjs9.md  EPIC-6zdf4.md  EPIC-a5vs9.md  EPIC-bb6pe.md  EPIC-c5uem.md  EPIC-z8tdz.md
.markplane/templates/: epic.md  manifest.yaml  note-analysis.md  note-research.md  note.md  plan-implementation.md  plan-refactor.md  task-bug.md  task.md
crates/markplane-cli/: Cargo.toml
crates/markplane-cli/src/: main.rs
crates/markplane-cli/src/commands/: add.rs  archive.rs  assign.rs  check.rs  claude_md.rs  context.rs  dashboard.rs  done.rs  edit.rs  epic.rs  formatting.rs  graph.rs  init.rs  link.rs  ls.rs  mcp.rs  metrics.rs  mod.rs  note.rs  plan.rs  promote.rs  serve.rs  show.rs  stale.rs  start.rs  status.rs  sync.rs  tag.rs  unarchive.rs  update.rs
crates/markplane-cli/src/mcp/: mod.rs  protocol.rs  resources.rs  tools.rs
crates/markplane-cli/tests/: integration.rs  mcp_integration.rs
crates/markplane-core/: Cargo.toml
crates/markplane-core/src/: context.rs  error.rs  frontmatter.rs  index.rs  lib.rs  links.rs  manifest.rs  models.rs  position.rs  project.rs  query.rs  references.rs  templates.rs
crates/markplane-mcp/: Cargo.toml
crates/markplane-mcp/src/: main.rs  resources.rs  tools.rs
crates/markplane-mcp/tests/: integration.rs
crates/markplane-web/ui/: next.config.ts  package-lock.json  package.json
crates/markplane-web/ui/src/app/: globals.css  layout.tsx
crates/markplane-web/ui/src/app/archive/: archive-content.tsx  page.tsx
crates/markplane-web/ui/src/app/backlog/: backlog-content.tsx  page.tsx
crates/markplane-web/ui/src/app/dashboard/: dashboard-content.tsx  page.tsx
crates/markplane-web/ui/src/app/docs/: doc-renderer.tsx  docs-content.tsx  page.tsx
crates/markplane-web/ui/src/app/epics/: page.tsx
crates/markplane-web/ui/src/app/graph/: graph-content.tsx  page.tsx
crates/markplane-web/ui/src/app/notes/: notes-content.tsx  page.tsx
crates/markplane-web/ui/src/app/plans/: page.tsx  plans-content.tsx
crates/markplane-web/ui/src/components/: providers.tsx
crates/markplane-web/ui/src/lib/: api.ts  constants.ts  types.ts
docs/: ai-integration.md  ai-native-pm-system-design.md  architecture.md  cli-reference.md  file-format.md  getting-started.md  mcp-setup.md  releasing.md  web-ui-guide.md
docs/archive/: ai-native-pm-system-design.md  research-brief.md
docs/web-ui/: architecture.md  research-brief.md  visual-design.md
(+62 files in other folders)
