[workspace]
members = ["crates/markplane-core", "crates/markplane-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Daniel Kingsley"]
rust-version = "1.93.0"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"  # Deprecated but stable; serde_yml (0.0.x) is too immature
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# File matching
glob = "0.3"

# Random ID generation
rand = "0.10"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Terminal output
colored = "3.1"
tabled = "0.20"

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }

# File watching
notify = { version = "7.0", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"

# Async utilities
futures = "0.3"

# Static file embedding
rust-embed = "8"
mime_guess = "2"

# Internal crates
markplane-core = { path = "crates/markplane-core" }
