[package]
name = "markplane-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for Markplane - AI-native project management"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
chrono.workspace = true
glob.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3.14"
