[package]
name = "markplane-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for Markplane - AI-native project management"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
chrono.workspace = true
glob.workspace = true
rand.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tempfile = "3.26"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3.26"
